<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingHorizontal="20dp"
    android:paddingVertical="40dp"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_profilePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/home_hello"
            android:textColor="@color/light"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_profilePhoto"
            app:layout_constraintStart_toEndOf="@+id/iv_profilePhoto"
            app:layout_constraintTop_toTopOf="@+id/iv_profilePhoto" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/home_user_name"
            android:textColor="@color/light"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_profilePhoto"
            app:layout_constraintEnd_toStartOf="@+id/im_favorite"
            app:layout_constraintStart_toEndOf="@+id/tv_hello"
            app:layout_constraintTop_toTopOf="@+id/iv_profilePhoto" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/im_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favorite"
            app:layout_constraintBottom_toBottomOf="@+id/iv_profilePhoto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_profilePhoto" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_searchMovie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_rounded_input"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="15dp"
            android:hint="@string/input_search_movie"
            android:textColor="@color/light"
            android:textColorHint="@color/light_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_profilePhoto" />

        <TextView
            android:id="@+id/tv_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/genre"
            android:textColor="@color/light"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_searchMovie" />

        <HorizontalScrollView
            android:id="@+id/hsv_movieCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_rounded_button"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/action"
                    android:textAllCaps="false"
                    android:textColor="@color/light" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/custom_rounded_button"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/comedy"
                    android:textAllCaps="false"
                    android:textColor="@color/light" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/custom_rounded_button"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/horror"
                    android:textAllCaps="false"
                    android:textColor="@color/light" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/custom_rounded_button"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/fiction"
                    android:textAllCaps="false"
                    android:textColor="@color/light" />

            </LinearLayout>

        </HorizontalScrollView>

        <TextView
            android:id="@+id/tv_popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/popular"
            android:textColor="@color/light"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hsv_movieCategory" />

        <HorizontalScrollView
            android:id="@+id/hsv_popularMovie"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_popular"
            tools:layout_editor_absoluteX="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_popularMovies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@tools:sample/avatars"/>

            </LinearLayout>

        </HorizontalScrollView>

        <TextView
            android:id="@+id/tv_newRelease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/new_release"
            android:textColor="@color/light"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hsv_popularMovie" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_newRelease">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_newReleaseMovies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>